fixed margin on collapsible work tabs on mobile

--- a/client/src/styles/workPage.css
+++ b/client/src/styles/workPage.css
@@ -60,7 +60,7 @@
 }
 
 .expand-contract {
-  margin-top: -100%;
+  margin-top: -100vh;
   transition: all 0.5s;
 }
 
